# CCI

./: .gitignore  README.md  pyproject.toml  run_cci.py
cci/: cci.py  llm_client.py  output_formatter.py  prompts.py
