[project]
name = "cci"
version = "0.1.0"
description = ""
authors = [
    {name = "Takumi OHASHI",email = "takumi.ohashi.4g@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers (>=4.44,<5.0)",
    "accelerate (>=0.33,<0.34)",
    "safetensors (>=0.4.4,<0.5.0)",
    "sentencepiece (>=0.2,<0.3)",
    "tokenizers (==0.21.1)",
    "datasets (>=2.20,<3.0)",
    "protobuf (>=4.25,<5.0)",
    "numpy (>=1.26,<2.0)",
    "pandas (>=2.2,<3.0)",
    "tqdm (>=4.66,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
